--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "typescript": "^4.9.5",
     "vitest": "0.12.6"
   },
+  "packageManager": "pnpm@8.9.2",
   "publishConfig": {
     "access": "public"
   }
